@@ -1,3 +1,7 @@
+2005-12-05  Yves Combe  <yves@ycombe.net>
+
+	* src/boards/gtans.c: fixed widget being over the help
+
 2005-12-04  Bruno coudoin  <bruno.coudoin@free.fr>
 
 	* src/boards/python/administration.py: fixed widget being over the help
